--- a/Day 59 Project (Blog Website) with Bootstrap/templates/post.html
+++ b/Day 59 Project (Blog Website) with Bootstrap/templates/post.html
@@ -1,12 +1,12 @@
-{% include 'header.html' %}
+{% include "header.html" %}
         <!-- Page Header-->
         
-        <header class="masthead" style="background-image: url('{{ blog.image_url }}')">
+        <header class="masthead" style="background-image: url('{{ url_for('static', filename=blog.image_url )}}')">
             <div class="container position-relative px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <div class="post-heading">                            
-                            <h1>{{ blog.title }}</h1>
+                        <div class="post-heading">
+                            <h1 style="color: white;">{{ blog.title }}</h1>
                             <h2 class="subheading">{{ blog.subtitle }}</h2>
                             <span class="meta">
                                 Posted by
