--- a/Day 67 Project (Blog Website) RESTful Routing/templates/make-post.html
+++ b/Day 67 Project (Blog Website) RESTful Routing/templates/make-post.html
@@ -1,5 +1,5 @@
 {% block content %} {% include "header.html" %}
-
+{% from 'bootstrap5/form.html' import render_form %}
 <!-- Page Header -->
 <header
   class="masthead"
@@ -10,10 +10,13 @@
       <div class="col-md-10 col-lg-8 col-xl-7">
         <div class="page-heading">
           <!-- TODO: Show a different h1 if editing existing post -->
+          {% if edit_head: %}
+          <h1>{{ edit_head }}</h1>
+          {% else %}
           <h1>New Post</h1>
+          {% endif %}
           <span class="subheading"
-            >You're going to make a great blog post!</span
-          >
+            >You're going to make a great blog post!</span>
         </div>
       </div>
     </div>
@@ -25,6 +28,9 @@
     <div class="row">
       <div class="col-lg-8 col-md-10 mx-auto">
         <!-- TODO:-Add CKEditor and render the form here -->
+        {{ render_form(form) }}
+        {{ ckeditor.load() }}
+        {{ ckeditor.config(name='body') }}
       </div>
     </div>
   </div>
