--- a/Day 69 (Blog Website) Adding Users/templates/post.html
+++ b/Day 69 (Blog Website) Adding Users/templates/post.html
@@ -1,5 +1,5 @@
 {% include "header.html" %}
-
+{% from "bootstrap5/form.html" import render_form %}
 <!-- Page Header-->
 <header class="masthead" style="background-image: url('{{post.img_url}}')">
   <div class="container position-relative px-4 px-lg-5">
@@ -10,7 +10,7 @@
           <h2 class="subheading">{{ post.subtitle }}</h2>
           <span class="meta"
             >Posted by
-            <a href="#">{{ post.author }}</a>
+            <a href="#">{{ post.author.name }}</a>
             on {{ post.date }}
           </span>
         </div>
@@ -26,6 +26,7 @@
       <div class="col-md-10 col-lg-8 col-xl-7">
         {{ post.body|safe }}
         <!--TODO: Only show Edit Post button if user id is 1 (admin user) -->
+        {% if current_user.id == 1 %}
         <div class="d-flex justify-content-end mb-4">
           <a
             class="btn btn-primary float-right"
@@ -33,21 +34,26 @@
             >Edit Post</a
           >
         </div>
-
+        {% endif %}
         <!-- Comments Area -->
         <!-- TODO: Add a CKEditor for commenting below -->
+        {{ ckeditor.load() }}
+        {{ ckeditor.config(name='comment_text') }}
         <div class="comment">
           <!-- TODO: Show all the comments on a post -->
+          {{ render_form(form, novalidate=True, button_map={"submit": "primary"}) }}
           <ul class="commentList">
+            {% for comment in post.comments %}
             <li>
               <div class="commenterImage">
-                <img src="../static/assets/img/default-profile.jpg" />
+                <img src="{{ comment.comment_author.email | gravatar }}" />
               </div>
               <div class="commentText">
-                <p>Some comment</p>
-                <span class="date sub-text">comment author name</span>
+                {{ comment.text|safe }}
+                <span class="date sub-text">{{ comment.comment_author.name }}</span>
               </div>
             </li>
+            {% endfor %}
           </ul>
         </div>
       </div>
